server-b/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-b
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8005
    targetPort: 8005
  selector:
    app: server-b
